--- a/templates/base.html
+++ b/templates/base.html
@@ -26,6 +26,9 @@
       <li class="nav-item">
         <a class="nav-link" href="/arkeliamieji">Ar keliamieji</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/biudzetas">Žurnalas</a>
+      </li>
     </ul>
   </div>
 </nav>
